# sign_objects_detection

./: .gitignore  README.md
SignObjectsDetection/: SignObjectsDetection.sln
SignObjectsDetection/SignObjectsDetection/: CMakeLists.txt  ReadMe.txt  SignObjectsDetection.cpp  SignObjectsDetection.vcxproj  SignObjectsDetection.vcxproj.filters  auto_correct.h  detection_object.cpp  detection_objects.h  mouse_click.h  stdafx.cpp  thread_pool.h
SignObjectsDetection/SignObjectsDetection/Debug/: SignObjectsDetection.lastbuildstate  SignObjectsDetection_manifest.rc
SignObjectsDetection/SignObjectsDetection/Release/: SignObjectsDetection.lastbuildstate
SignObjectsDetection/SignObjectsDetection/alglib/: CMakeLists.txt
SignObjectsDetection/SignObjectsDetection/headers/: auto_correct.h  detection_objects.h  mouse_click.h  thread_pool.h
SignObjectsDetection/SignObjectsDetection/sources/: auto_correct.cpp  detection_object.cpp  mouse_click.cpp  thread_pool.cpp
